# singularity-payments-py

./: .gitignore  README.md  pyproject.toml
core/mpesa/client/: mpesa_client.py
core/mpesa/types/: config.py
core/mpesa/utils/: errors.py  retry.py
docs/: package-lock.json
docs/content/docs/getting-started/: configuration.mdx  index.mdx  installation.mdx  meta.json  quickstart.mdx
docs/content/docs/integrations/: django.mdx
src/singularity_payments/: __init__.py  errors.py
src/singularity_payments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/singularity_payments/core/mpesa/client/: mpesa_client.py
src/singularity_payments/core/mpesa/types/: mpesa.py
src/singularity_payments/core/mpesa/utils/: auth.py  callback.py  ratelimiter.py  security.py
