[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-mpesa"
version = "0.1.0"
description = "M-Pesa SDK"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "requests",
  "python-dotenv"
]

[project.optional-dependencies]
django = [
  "Django>=4.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "packages*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
