[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-payments"
version = "0.1.0"
description = "M-Pesa SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests",
  "python-dotenv"
]

[project.optional-dependencies]
django = ["Django>=4.2"]
fastapi = ["fastapi>=0.110", "pydantic>=2.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["singularity_payments*"]
